--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -8,7 +8,6 @@
 </head>
 
 <body>
-    <!-- Header -->
     <header>
         <h1>Schedule for TechCon 2024</h1>
         <nav>
@@ -21,61 +20,50 @@
         </nav>
     </header>
 
-    <!-- Main Content -->
     <main>
-        <table border="1">
-            <caption>Detailed Schedule of Events for TechCon 2024</caption>
-            <thead>
-                <tr>
-                    <th scope="col">Time</th>
-                    <th scope="col">Session</th>
-                    <th scope="col">Speaker</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>09:00 - 10:00</td>
-                    <td>Opening Keynote: The Future of Tech</td>
-                    <td>Jane Doe</td>
-                </tr>
-                <tr>
-                    <td>10:15 - 11:15</td>
-                    <td>AI and Machine Learning Trends</td>
-                    <td>John Smith</td>
-                </tr>
-                <tr>
-                    <td>11:30 - 12:30</td>
-                    <td>Cybersecurity in 2024</td>
-                    <td>Maria Garcia</td>
-                </tr>
-                <tr>
-                    <td>12:30 - 13:30</td>
-                    <td>Networking Lunch</td>
-                    <td>-</td>
-                </tr>
-                <tr>
-                    <td>13:30 - 14:30</td>
-                    <td>Panel Discussion: Women in Tech</td>
-                    <td>Various Speakers</td>
-                </tr>
-                <tr>
-                    <td>14:45 - 15:45</td>
-                    <td>Startup Showcase</td>
-                    <td>Entrepreneur Panel</td>
-                </tr>
-                <tr>
-                    <td>16:00 - 17:00</td>
-                    <td>Closing Remarks & Future Outlook</td>
-                    <td>Conference Chair</td>
-                </tr>
-            </tbody>
-        </table>
+        <section>
+            <table>
+                <caption>Detailed Schedule of Events for TechCon 2024</caption>
+                <thead>
+                    <tr>
+                        <th scope="col">Time</th>
+                        <th scope="col">Session</th>
+                        <th scope="col">Speaker</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>09:00 - 10:00</td>
+                        <td>Opening Keynote</td>
+                        <td>Dr. Jane Smith</td>
+                    </tr>
+                    <tr>
+                        <td>10:15 - 11:00</td>
+                        <td>AI and the Future</td>
+                        <td>John Doe</td>
+                    </tr>
+                    <tr>
+                        <td>11:15 - 12:00</td>
+                        <td>Cybersecurity Trends</td>
+                        <td>Mary Johnson</td>
+                    </tr>
+                    <tr>
+                        <td>01:00 - 02:00</td>
+                        <td>Blockchain Innovations</td>
+                        <td>Michael Lee</td>
+                    </tr>
+                    <tr>
+                        <td>02:15 - 03:00</td>
+                        <td>Closing Panel Discussion</td>
+                        <td>Panel of Experts</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
     </main>
 
-    <!-- Footer -->
     <footer>
         <p>&copy; 2025 Copyright TechCon</p>
     </footer>
 </body>
-
 </html>
