Index File complete file

--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -97,7 +97,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 Copyright TechCon</p>
+        <p>&copy; 2025 Copyright</p>
     </footer>
 </body>
 </html>
