--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -60,7 +60,7 @@
         </main>
 
         <footer>
-        <p>&copy; 2025 Copyright TechCon</p>
+         <p> &copy; 2025 Copyright</p>
     </footer>
     </body>
 </html>
