Index File complete file

--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -62,8 +62,8 @@
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2025 Copyright TechCon</p>
+   <footer>
+         <p> &copy; 2025 Copyright</p>
     </footer>
 </body>
 </html>
