Index File complete file

--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -29,6 +29,9 @@
         <label for="email">Email Address:</label>
         <input type="email" id="email" name="email" required>
 
+        <label for="password">Create Password:</label>
+        <input type="password" id="password" name="password" required>
+
         <label for="ticket">Ticket Type:</label>
         <select id="ticket" name="ticket" required>
           <option value="general">General Admission</option>
@@ -36,13 +39,18 @@
           <option value="vip">VIP</option>
         </select>
 
+        <label>
+          <input type="checkbox" name="terms" required>
+          I agree to the terms and conditions
+        </label>
+
         <button type="submit">Submit Registration</button>
       </form>
     </section>
   </main>
 
-   <footer>
-         <p> &copy; 2025 Copyright</p>
-    </footer>
+  <footer>
+    <p>&copy; 2024 TechCon. All rights reserved.</p>
+  </footer>
 </body>
 </html>
