--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -63,7 +63,7 @@
     </main>
 
    <footer>
-         <p> &copy; 2025 Copyright</p>
+         <p> &copy; 2025 copyright</p>
     </footer>
 </body>
 </html>
